--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,5 @@ jobs:
       uses: naminodarie/get-net-sdk-project-versions-action@v1
       id: get-version
       with:
-        proj-path: ./WolvenKit/WolvenKit.UI.csproj
+        proj-path: ./WolvenKit/WolvenKit.csproj
     - run: echo "${{steps.get-version.outputs.version}}"
