--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ WolvenKit.IrrlichtLime/Debug-x64
 WolvenKit.IrrlichtLime/Release-x64
 Libs/Irrlicht.dll
 WolvenKit.IrrlichtLime/Release-x86
+msbuild.binlog
