--- a/WolvenKit.CLI/WolvenKit.CLI.csproj
+++ b/WolvenKit.CLI/WolvenKit.CLI.csproj
@@ -22,6 +22,8 @@
       <PackageTags>wolvenkit, cyberpunk2077</PackageTags>
       <StartupObject>WolvenKit.CLI.Program</StartupObject>
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+      <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+      <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -50,7 +52,7 @@
     </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
+    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj"/>
     <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
     <ProjectReference Include="..\WolvenKit.Modkit\WolvenKit.Modkit.csproj" />
   </ItemGroup>
