--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -297,60 +297,59 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ModuleInit.Fody" Version="2.1.1" PrivateAssets="all" />
+      <PackageReference Include="ControlzEx" Version="5.0.1" />
+      <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.5.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+      <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="11.1.1" />
+      <PackageReference Include="AdonisUI" Version="1.17.0" />
+      <PackageReference Include="AdonisUI.ClassicTheme" Version="1.17.0" />
+    <PackageReference Include="Fluent.Ribbon" Version="8.0.3" />
     <PackageReference Include="Catel.Fody" Version="4.7.0" PrivateAssets="all" />
     <PackageReference Include="Ab3d.DXEngine.Wpf" Version="4.3.7763" />
     <PackageReference Include="Ab3d.DXEngine" Version="4.3.7763" />
     <PackageReference Include="Ab3d.PowerToys" Version="9.5.7763" />
-    <PackageReference Include="Catel.Core" Version="5.12.16" />
-    <PackageReference Include="Catel.MVVM" Version="5.12.16" />
+    <PackageReference Include="Catel.Core" Version="5.12.17" />
+    <PackageReference Include="Catel.MVVM" Version="5.12.17" />
     <PackageReference Include="CatFacts.Net" Version="0.1.1" />
     <PackageReference Include="Discord.Net" Version="2.4.0" />
     <PackageReference Include="Feather.Controls" Version="1.0.3" />
     <PackageReference Include="Feather.Core" Version="1.0.0" />
-    <PackageReference Include="Fody" Version="6.5.1" PrivateAssets="all" />
-    <PackageReference Include="MahApps.Metro" Version="2.4.6" />
+    <PackageReference Include="Fody" Version="6.5.2" PrivateAssets="all" />
+    <PackageReference Include="MahApps.Metro" Version="2.4.7" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.8.0" />
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.864.35" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.902.49" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NodeNetwork" Version="5.2.0" />
     <PackageReference Include="NodeNetworkToolkit" Version="5.2.0" />
-   <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.5.0">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="Octokit" Version="0.50.0" />
-    <PackageReference Include="Orc.CommandLine" Version="4.1.1" />
-    <PackageReference Include="Orc.CsvTextEditor" Version="4.1.0" />
-    <PackageReference Include="Orc.LogViewer" Version="4.1.0" />
-    <PackageReference Include="Syncfusion.Edit.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.PropertyGrid.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfAccordion.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfBarcode.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfHubTile.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfImageEditor.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfKanban.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfRadialMenu.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfTextInputLayout.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfTreeNavigator.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.Themes.Office2019Black.WPF" Version="19.1.0.63" />
-    <PackageReference Include="Syncfusion.Tools.WPF" Version="19.1.0.63" />
+    <PackageReference Include="Syncfusion.Edit.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.PropertyGrid.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfAccordion.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfBarcode.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfGrid.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfHubTile.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfImageEditor.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfKanban.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfNavigationDrawer.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfRadialMenu.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfRichTextBoxAdv.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfTextInputLayout.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfTreeNavigator.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF" Version="19.2.0.49" />
+    <PackageReference Include="Syncfusion.Themes.Office2019Black.WPF" Version="19.2.0.49" />
+      <PackageReference Include="Syncfusion.Tools.WPF" Version="19.2.0.49" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
-    <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.5.0" />
     <PackageReference Include="SharpVectors.Reloaded" Version="1.7.5" />
     <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" NoWarn="NU1701" />
-    <PackageReference Include="WolvenKit.AvalonDock.Themes.VS2013" Version="4.50.4" />
     <PackageReference Include="WolvenKit.HandyControl" Version="3.2.0" />
-    <PackageReference Include="WolvenKit.Orchestra.Core" Version="4.2.3" />
-    <PackageReference Include="WolvenKit.Shell.Ribbon.FluentMahApps" Version="5.0.2" />
     <PackageReference Include="WolvenKit.WPFSoundVisualizationLibNet5" Version="1.0.1" />
     <PackageReference Include="WpfAnalyzers" Version="3.5.4" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
