fix offline mode
- fixed a bug where the updateservice would crash when offline
- disabled webview2 when offline
- check if webview2 is installed on app startup
- fixed a bug where the recently used items would crash

--- a/WolvenKit.Core/WolvenKit.Core.csproj
+++ b/WolvenKit.Core/WolvenKit.Core.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
         <PackageReference Include="CsvHelper" Version="27.1.1" />
+        <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
         <PackageReference Include="protobuf-net.Core" Version="3.0.101" />
         <PackageReference Include="ReactiveUI" Version="14.1.1" />
         <PackageReference Include="System.Reflection.MetadataLoadContext" Version="5.0.1" />
