--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DirectXTexSharp" Version="0.3.0" >
+    <PackageReference Include="DirectXTexSharp" Version="0.3.0">
         <ExcludeAssets>runtime</ExcludeAssets>
     </PackageReference>
     <PackageReference Include="FastMember" Version="1.5.0" />
@@ -56,6 +56,7 @@
         <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="protobuf-net" Version="3.0.101" />
+    <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0023" />
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
