--- a/WolvenKit.Core/WolvenKit.Core.csproj
+++ b/WolvenKit.Core/WolvenKit.Core.csproj
@@ -29,6 +29,7 @@
         <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
         <PackageReference Include="protobuf-net.Core" Version="3.0.101" />
         <PackageReference Include="ReactiveUI" Version="14.1.1" />
+        <PackageReference Include="semver" Version="2.0.6" />
         <PackageReference Include="System.Reflection.MetadataLoadContext" Version="5.0.1" />
     </ItemGroup>
 
