--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -16,7 +16,7 @@
     <NoWarn>$(NoWarn);CA1416</NoWarn>
     <NoWarn>$(NoWarn);SYSLIB0001</NoWarn>
     <AssemblyVersion>8.2.2</AssemblyVersion>
-    <Version>8.2.2</Version>
+    <InformationalVersion>8.2.2-nightly</InformationalVersion>
     <Description>WPF</Description>
     <NoWin32Manifest>true</NoWin32Manifest>
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
@@ -304,7 +304,7 @@
       <PackageReference Include="ControlzEx" Version="5.0.1" />
       <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.5.0">
         <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <IncludeAssets>runtime; build; native; compile; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="11.1.1" />
