--- a/WolvenKit.MSTests/WolvenKit.MSTests.csproj
+++ b/WolvenKit.MSTests/WolvenKit.MSTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>WolvenKit.MSTests</AssemblyName>
@@ -9,7 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-      <PackageReference Include="Catel.Core" Version="5.12.16" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
       <PackageReference Include="MSTest.TestAdapter" Version="2.2.4" />
