--- a/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
+++ b/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
@@ -11,9 +11,8 @@
 		<RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
 		<PackageTags>wolvenkit, cyberpunk2077</PackageTags>
         <PackageOutputPath>./nupkg</PackageOutputPath>
-		<AssemblyVersion>3.23.2.0</AssemblyVersion>
-		<FileVersion>3.23.2.0</FileVersion>
-		<Version>3.23.2</Version>
+		<AssemblyVersion>3.3.0</AssemblyVersion>
+        <InformationalVersion>red4 v1.30</InformationalVersion>
 		<NoWarn>$(NoWarn);NU5104</NoWarn>
 	</PropertyGroup>
 
