--- a/WolvenKit.Modkit/WolvenKit.Modkit.csproj
+++ b/WolvenKit.Modkit/WolvenKit.Modkit.csproj
@@ -13,7 +13,6 @@
       <PackageReference Include="AsyncEnumerator" Version="4.0.2" />
       <PackageReference Include="SharpGLTF.Core" Version="1.0.0-alpha0023" />
       <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0023" />
-    <PackageReference Include="WolvenKit.RED4.CR2W" Version="3.23.2" />
   </ItemGroup>
     <ItemGroup>
         <Content Include="opus-tools\opusdec.exe">
@@ -28,6 +27,7 @@
     </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
+    <ProjectReference Include="..\WolvenKit.RED4.CR2W\WolvenKit.RED4.CR2W.csproj" />
   </ItemGroup>
 
 </Project>
