--- a/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
+++ b/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
@@ -12,7 +12,7 @@
 		<PackageTags>wolvenkit, cyberpunk2077</PackageTags>
         <PackageOutputPath>./nupkg</PackageOutputPath>
 		<AssemblyVersion>3.3.0</AssemblyVersion>
-        <InformationalVersion>red4 v1.30</InformationalVersion>
+        <InformationalVersion>1.3.0</InformationalVersion>
 		<NoWarn>$(NoWarn);NU5104</NoWarn>
 	</PropertyGroup>
 
