--- a/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
+++ b/WolvenKit.RED4.CR2W/WolvenKit.RED4.CR2W.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<Company>WolvenKit</Company>
 		<Description>File formats (Cyberpunk 2077) for the WolvenKit Mod Editor.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -14,6 +14,7 @@
 		<AssemblyVersion>3.3.0</AssemblyVersion>
         <InformationalVersion>1.3.0</InformationalVersion>
 		<NoWarn>$(NoWarn);NU5104</NoWarn>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
