--- a/WolvenKit.Witcher3Formats/WolvenKit.Witcher3Formats.csproj
+++ b/WolvenKit.Witcher3Formats/WolvenKit.Witcher3Formats.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
     <ItemGroup>
