--- a/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
+++ b/WolvenKit.RED4.TweakDB/WolvenKit.RED4.TweakDB.csproj
@@ -11,4 +11,13 @@
     <FileVersion>0.1.0.0</FileVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
+    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
+  </ItemGroup>
+
 </Project>
