--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -32,16 +32,31 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Functionality\Controllers\Tw3Controller.cs" />
+    <Compile Remove="Functionality\ProjectManagement\Project\Tw3Project.cs" />
+    <Compile Remove="Models\Arguments\RequestEmbeddedFileOpenArgs.cs" />
+    <Compile Remove="Models\Arguments\SelectChunkArgs.cs" />
+    <Compile Remove="Models\CsvCommonFunctions.cs" />
+    <Compile Remove="Models\CsvMaps.cs" />
+    <Compile Remove="Models\ImageUtility.cs" />
+    <Compile Remove="Models\ImportModel.cs" />
+    <Compile Remove="ViewModels\Editor\BulkEditViewModel.cs" />
+    <Compile Remove="ViewModels\Editor\ImportViewModel.cs" />
+    <Compile Remove="ViewModels\Editor\ModKitViewModel.cs" />
     <Compile Remove="ViewModels\HomePage\Pages\RecentlyUsedItemsViewModel.cs" />
     <Compile Remove="ViewModels\Wizards\PublishWizardViewModel.cs" />
   </ItemGroup>
 
     <ItemGroup>
-    <ProjectReference Include="..\WolvenKit.Witcher3Formats\WolvenKit.Witcher3Formats.csproj" />
+    <!--<ProjectReference Include="..\WolvenKit.Witcher3Formats\WolvenKit.Witcher3Formats.csproj" />-->
+    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
+    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
+    <ProjectReference Include="..\WolvenKit.Modkit\WolvenKit.Modkit.csproj" />
     <ProjectReference Include="..\WolvenManager.Installer\WolvenManager.Installer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="WinCopies.WindowsAPICodePack" Version="2.5.0" />
     <PackageReference Include="WinCopies.WindowsAPICodePack.Shell" Version="2.5.0" />
     <PackageReference Include="WolvenKit.HandyControl" Version="3.2.0" />
@@ -51,7 +66,7 @@
     <PackageReference Include="Magick.NET.SystemWindowsMedia" Version="4.0.2" />
     <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
     <PackageReference Include="NAudio" Version="2.0.1" />
-    
+   
     <PackageReference Include="ReactiveUI" Version="14.1.1" />
     <PackageReference Include="ReactiveUI.Fody" Version="14.1.1" />
     <PackageReference Include="ReactiveUI.Validation" Version="2.1.1" />
@@ -78,6 +93,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\Arguments\" />
     <Folder Include="ViewModels\Others\" />
     <Folder Include="ViewModels\Shared\" />
   </ItemGroup>
