--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -42,10 +42,13 @@
   <ItemGroup>
     <Compile Remove="Extensions\PropertyGridEditors\**" />
     <Compile Remove="Model\Cr2w\**" />
+    <Compile Remove="RED3\**" />
     <EmbeddedResource Remove="Extensions\PropertyGridEditors\**" />
     <EmbeddedResource Remove="Model\Cr2w\**" />
+    <EmbeddedResource Remove="RED3\**" />
     <None Remove="Extensions\PropertyGridEditors\**" />
     <None Remove="Model\Cr2w\**" />
+    <None Remove="RED3\**" />
     <None Remove="Resources\missinghashes.txt" />
     <None Remove="Resources\unusedhashes.kark" />
     <EmbeddedResource Include="Resources\missinghashes.txt" />
@@ -77,7 +80,7 @@
     <PackageReference Include="SharpZipLib" Version="1.3.2" />
     <PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
-    <PackageReference Include="WolvenKit.RED3.CR2W" Version="3.32.3" />
+    <!--PackageReference Include="WolvenKit.RED3.CR2W" Version="3.32.3" /-->
     <PackageReference Include="System.Reflection.MetadataLoadContext" Version="5.0.1" />
 
   </ItemGroup>
