--- a/WolvenKit.MSTests/WolvenKit.MSTests.csproj
+++ b/WolvenKit.MSTests/WolvenKit.MSTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Catel.Core" Version="5.12.17" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
       <PackageReference Include="MSTest.TestAdapter" Version="2.2.4" />
